Chinese language support

--- a/listPhotos.html
+++ b/listPhotos.html
@@ -43,7 +43,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="css/cns.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -61,11 +61,11 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="listPhotos.html">Data</a></li>
-					<li><a href="upload.html">Upload</a></li>
-					<li><a href="search.html">Search</a></li>
-					<li><a href="person.html">Person</a></li>
+					<li><a href="index.html">主页</a></li>
+					<li class="fh5co-active"><a href="listPhotos.html">数据查询</a></li>
+					<li><a href="upload.html">上传数据</a></li>
+					<li><a href="search.html">车辆检索</a></li>
+					<li><a href="person.html">行人检索</a></li>
 				</ul>
 			</nav>
 
@@ -87,7 +87,7 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading">DataBase List</h1>
+						<h1 class="fh5co-heading">数据库列表</h1>
 					</div>
 				</div>
 				<div id="add-data" class="fh5co-gallery animate-box" data-animate-effect="fadeInLeft">
@@ -99,13 +99,13 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">User Guide</h1>
+						<h1 class="fh5co-heading-colored">使用说明</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Made by su</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<p class="fh5co-lead">PKU</p>
+						<p><a href="#" class="btn btn-primary btn-outline">更多</a></p>
 					</div>
 
 				</div>
