--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/cns.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -56,11 +57,11 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
-					<li><a href="listPhotos.html">Data</a></li>
-					<li><a href="upload.html">Upload</a></li>
-					<li><a href="search.html">Search</a></li>
-					<li><a href="person.html">Person</a></li>
+					<li class="fh5co-active"><a href="index.html">主页</a></li>
+					<li><a href="listPhotos.html">数据查询</a></li>
+					<li><a href="upload.html">上传数据</a></li>
+					<li><a href="search.html">车辆检索</a></li>
+					<li><a href="person.html">行人检索</a></li>
 				</ul>
 			</nav>
 
@@ -85,22 +86,22 @@
 					<div class="row" >
 						<div class="col-md-4 text-center">
 							<span id="data" class="fh5co-counter js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Data Bases</span>
+							<span class="fh5co-counter-label" style="font-size: 20px;font-family: 'Droid Sans Mono'">数据库</span>
 						</div>
 						<div class="col-md-4 text-center">
 							<span id="count" class="fh5co-counter js-counter" data-from="0" data-to="10000000" data-speed="1000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Photos</span>
+							<span class="fh5co-counter-label" style="font-size: 20px;font-family: 'Droid Sans Mono'">图片</span>
 						</div>
 						<div class="col-md-4 text-center">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="15" data-speed="1000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Calculation times</span>
+							<span class="fh5co-counter-label" style="font-size: 20px;font-family: 'Droid Sans Mono'">计算次数</span>
 						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="fh5co-narrow-content fh5co-border-bottom">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Function Description</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">功能介绍</h2>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
@@ -108,8 +109,8 @@
 								<i class="icon-strategy"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>For Listing</h3>
-								<p>Listing all databases</p>
+								<h3>图片列表</h3>
+								<p>展示现有索引数据和原始图片数据</p>
 							</div>
 						</div>
 					</div>
@@ -119,8 +120,8 @@
 								<i class="icon-telescope"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>For Uploading</h3>
-								<p>Uploading the data</p>
+								<h3>图片上传</h3>
+								<p>上传图片数据，建立索引</p>
 							</div>
 						</div>
 					</div>
@@ -130,8 +131,8 @@
 								<i class="icon-circle-compass"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>For Searching</h3>
-								<p>Searching and detect images</p>
+								<h3>检索功能</h3>
+								<p>检索和检测图片</p>
 							</div>
 						</div>
 					</div>
@@ -141,14 +142,14 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">Get in touch</h1>
+						<h1 class="fh5co-heading-colored">相关合作和交流</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft" >
-						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<p class="fh5co-lead"></p>
 						<div style="text-align:right">
-							<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+							<p><a href="#" class="btn btn-primary btn-outline">更多</a></p>
 						</div>
 					</div>
 
