--- a/person.html
+++ b/person.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="css/bootstrap-select.min.css">
     <link rel="stylesheet" href="css/checkbox-11.css">
     <link rel="stylesheet" href="css/right.css">
+    <link rel="stylesheet" href="css/cns.css">
     <style type="text/css">
         ul.imglist{ margin:0 auto;overflow:hidden}
         ul.imglist li{ float:left; padding:4px 8px; width:220px;list-style-type:none;}
@@ -93,11 +94,12 @@
         <h1 id="fh5co-logo"><a href="index.html"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
         <nav id="fh5co-main-menu" role="navigation">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="listPhotos.html">Data</a></li>
-                <li><a href="upload.html">Upload</a></li>
-                <li><a href="search.html">Search</a></li>
-                <li class="fh5co-active"><a href="person.html">Person</a></li>
+                <li><a href="index.html">主页</a></li>
+                <li><a href="listPhotos.html">数据查询</a></li>
+            	<li><a href="upload.html">上传数据</a></li>
+                <li><a href="search.html">车辆检索</a></li>
+                <li class="fh5co-active"><a href="person.html">行人检索</a></li>
+
             </ul>
         </nav>
 
@@ -113,7 +115,7 @@
             <div id="show-main">
                 <div class="row">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                        <h1 class="fh5co-heading">Person Search</h1>
+                        <h1 class="fh5co-heading">行人检索</h1>
                     </div>
                 </div>
 
@@ -125,12 +127,12 @@
                     <div class="row" style="margin-top: 20px;text-align: center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary" data-method="setDragMode" data-option="move" title="Move">
-						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Move the picture">
+						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="移动图片">
 						  <span class="fa fa-arrows"></span>
 						</span>
                             </button>
                             <button type="button" class="btn btn-primary" data-method="setDragMode" data-option="crop" title="Crop">
-						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Crop the picture">
+						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="开始截图">
 						  <span class="fa fa-crop"></span>
 						</span>
                             </button>
@@ -138,12 +140,12 @@
 
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary" data-method="zoom" data-option="0.1" title="Zoom In">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Zoom In">
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="放大">
 							  <span class="fa fa-search-plus"></span>
 							</span>
                             </button>
                             <button type="button" class="btn btn-primary" data-method="zoom" data-option="-0.1" title="Zoom Out">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Zoom Out">
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="缩小">
 							  <span class="fa fa-search-minus"></span>
 							</span>
                             </button>
@@ -151,12 +153,12 @@
 
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary" data-method="crop" title="Crop">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Crop Initialization">
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="截图初始化">
 							  <span class="fa fa-check"></span>
 							</span>
                             </button>
                             <button type="button" class="btn btn-primary" data-method="clear" title="Clear">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Clear">
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="清空">
 							  <span class="fa fa-remove"></span>
 							</span>
                             </button>
@@ -164,13 +166,13 @@
 
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary" data-method="reset" title="Reset">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Reset">
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="重置">
 							  <span class="fa fa-refresh"></span>
 							</span>
                             </button>
                             <label class="btn btn-primary btn-upload" for="inputImage" title="Upload image file">
                                 <input type="file" class="sr-only" id="inputImage" name="file" accept=".jpg,.jpeg,.png,.gif,.bmp,.tiff">
-                                <span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Import picture data">
+                                <span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="上传数据">
 							 <span class="fa fa-upload"></span>
 							</span>
                             </label>
@@ -178,8 +180,8 @@
                     </div>
                     <div class="row fh5co-border-bottom" style="margin-top: 20px;text-align: center">
                         <button id="btn-crop" type="button" class="btn btn-primary btn-outline" data-method="getCroppedCanvas" style="margin-bottom: 30px">
-						<span id="span-crop" class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Go Search">
-						  Get Cropped Image
+						<span id="span-crop" class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="开始检索">
+						  获取检索图片
 						</span>
                         </button>
                     </div>
@@ -190,7 +192,7 @@
             <div  id="pic-picked" class="row " style="margin-top: 50px">
                 <div class="row">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                        <h2 >Example Images</h2>
+                        <h2>示例图片</h2>
                     </div>
                 </div>
                 <!-- picture picked -->
@@ -251,7 +253,7 @@
 
         <div id="searche-result" class="fh5co-narrow-content" style="display:none;">
             <div class="row animate-box"   data-animate-effect="fadeInLeft">
-                <h1 class="fh5co-heading-colored">Query Image</h1>
+                <h1 class="fh5co-heading-colored">待查询的图片</h1>
                 <div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
                     <ul id="myorigin" >
                         <li id="li_origin" style="list-style-type:none;">
@@ -261,7 +263,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                    <h1 class="fh5co-heading-colored">Results</h1>
+                    <h1 class="fh5co-heading-colored">检索结果</h1>
                     <div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
                 </div>
             </div>
