--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="css/cns.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -63,11 +63,11 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="listPhotos.html">Data</a></li>
-					<li><a href="upload.html">Upload</a></li>
-					<li><a href="search.html">Search</a></li>
-					<li><a href="person.html">Person</a></li>
+					<li><a href="index.html">主页</a></li>
+					<li class="fh5co-active"><a href="listPhotos.html">数据查询</a></li>
+					<li><a href="upload.html">上传数据</a></li>
+					<li><a href="search.html">车辆检索</a></li>
+					<li><a href="person.html">行人检索</a></li>
 				</ul>
 			</nav>
 
@@ -95,7 +95,7 @@
 					</div>
 					<div class="col-md-4"></div>
 					<div class="col-md-4" style="text-align: right">
-						<p><a href="" class="btn btn-primary btn-outline" >Add Pictures</a></p>
+						<p><a href="" class="btn btn-primary btn-outline" >增加图片/图片集</a></p>
 					</div>
 				</div>
 
@@ -108,9 +108,9 @@
 						<table  id="table_toggle" data-height="246" data-pagination="true">
 							<thead>
 							<tr>
-								<th data-field="id" data-align="center">ID</th>
-								<th data-field="name" data-align="center">Name</th>
-								<th data-field="Location" data-align="center">Location</th>
+								<th data-field="id" data-align="center">编号</th>
+								<th data-field="name" data-align="center">图片名</th>
+								<th data-field="Location" data-align="center">图片URL</th>
 							</tr>
 							</thead>
 						</table>
@@ -127,13 +127,13 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">Get in touch</h1>
+						<h1 class="fh5co-heading-colored">相关合作和交流</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+						<p class="fh5co-lead"></p>
+						<p><a href="#" class="btn btn-primary">更多</a></p>
 					</div>
 					
 				</div>
