--- a/personMap.html
+++ b/personMap.html
@@ -56,6 +56,10 @@
         ul.thumbnails.image_picker_selector{margin-left: 100px}
         ul.thumbnails.image_picker_selector li{float:left; padding:4px 8px; width:220px;list-style-type:none;}
         ul.thumbnails.image_picker_selector li img{ display:block; width:220px; height:180px;}
+
+        .iw_poi_title {color:#CC5522;font-size:20px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
+        .iw_poi_content {font:15px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
+        label.BMapLabel {padding-right: 105px !important;text-align: center !important;}
     </style>
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
