map-master change

--- a/test.html
+++ b/test.html
@@ -27,14 +27,14 @@
 <script type="text/javascript">
     data =[
     {
-         title: "Top1 结果",
+         title: "8230912809381209381029380129830",
          content: "联通岗",
          point: "37.200251|122.061231",
          isOpen: 0
      },
      {
          title: "文登南路",
-         content: "图片2",
+         content: "8980980980980980",
          point: "37.200427|122.069339",
          isOpen: 0
 
