new file change

--- a/upload.html
+++ b/upload.html
@@ -70,6 +70,7 @@
 					<li class="fh5co-active"><a href="upload.html">上传数据</a></li>
 					<li><a href="search.html">车辆检索</a></li>
 					<li><a href="person.html">行人检索</a></li>
+					<li><a href="posture.html">姿态检索</a></li>
 				</ul>
 			</nav>
 
@@ -110,7 +111,7 @@
 					</div>
 					<div class="col-md-4"></div>
 				</div>
-				<div id="show-tab" class="animate-box " data-animate-effect="fadeInLeft" style="display: none ">
+				<div id="show-tab" class="animate-box " data-animate-effect="fadeInLeft" style="display: none;">
 					<form action="./php/upload_onefile.php" method="post" enctype="multipart/form-data">
 					<h3 style="margin-top: 80px;">1. 输入数据库名字:</h3>
 					<div class="row">
