--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<li><a href="upload.html">上传数据</a></li>
 					<li><a href="search.html">车辆检索</a></li>
 					<li><a href="person.html">行人检索</a></li>
+					<li><a href="posture.html">姿态检索</a></li>
 				</ul>
 			</nav>
 
