--- a/posture.html
+++ b/posture.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
-    <meta name="usage" content="person" />
+    <meta name="usage" content="posture" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -98,8 +98,8 @@
                 <li><a href="listPhotos.html">数据查询</a></li>
             	<li><a href="upload.html">上传数据</a></li>
                 <li><a href="search.html">车辆检索</a></li>
-                <li class="fh5co-active"><a href="person.html">行人检索</a></li>
-                <li><a href="posture.html">姿态检索</a></li>
+                <li><a href="person.html">行人检索</a></li>
+                <li class="fh5co-active"><a href="posture.html">姿态检索</a></li>
             </ul>
         </nav>
 
