--- a/person.html
+++ b/person.html
@@ -121,7 +121,7 @@
 
                 <div class="docs-buttons" >
                     <div class="row" style="height: 500px;">
-                        <img style="max-width: 100%" id="image" src="images/back.jpg">
+                        <img style="max-width: 100%" id="image" src="images/back-person.jpg">
                     </div>
 
                     <div class="row" style="margin-top: 20px;text-align: center">
@@ -198,22 +198,16 @@
                 <!-- picture picked -->
                 <div  class="col-md-12 animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft" style="text-align: center">
                     <select id="select_pic" class="image-picker show-html">
-                        <option data-img-src="./images/choose/1.jpg" data-img-class="first" data-img-alt="Page 1" value="1">  Page 1  </option>
-                        <option data-img-src="./images/choose/5.jpg" data-img-alt="Page 2" value="2">  Page 2  </option>
-                        <option data-img-src="./images/choose/7.jpg" data-img-alt="Page 3" value="3">  Page 3  </option>
-                        <option data-img-src="./images/choose/11.jpg" data-img-alt="Page 4" value="4"> Page 4 </option>
-                        <option data-img-src="./images/choose/20.jpg" data-img-alt="Page 5" value="5"> Page 5 </option>
-                        <option data-img-src="./images/choose/21.jpg" data-img-alt="Page 6" value="6"> Page 6 </option>
-                        <option data-img-src="./images/choose/22.jpg" data-img-alt="Page 7" value="7"> Page 7 </option>
-                        <option data-img-src="./images/choose/23.jpg" data-img-alt="Page 8" value="8"> Page 8 </option>
-                        <option data-img-src="./images/choose/24.jpg" data-img-alt="Page 9" value="9"> Page 9 </option>
-                        <option data-img-src="./images/choose/25.jpg" data-img-alt="Page 10" value="10"> Page 10 </option>
-                        <option data-img-src="./images/choose/26.jpg" data-img-alt="Page 11" value="11"> Page 11 </option>
-                        <option data-img-src="./images/choose/27.jpg" data-img-alt="Page 12" value="12"> Page 12 </option>
-                        <option data-img-src="./images/choose/28.jpg" data-img-alt="Page 13" value="13"> Page 13 </option>
-                        <option data-img-src="./images/choose/29.jpg" data-img-alt="Page 14" value="14"> Page 14 </option>
-                        <option data-img-src="./images/choose/30.jpg" data-img-alt="Page 15" value="15"> Page 15 </option>
-                        <option data-img-src="./images/choose/12.jpg" data-img-alt="Page 16" data-img-class="last" value="16"> Page 16 </option>
+                        <option data-img-src="./images/choose/1-person.jpg" data-img-class="first" data-img-alt="Page 1" value="1">  Page 1  </option>
+                        <option data-img-src="./images/choose/5-person.jpg" data-img-alt="Page 2" value="2">  Page 2  </option>
+                        <option data-img-src="./images/choose/7-person.jpg" data-img-alt="Page 3" value="3">  Page 3  </option>
+                        <option data-img-src="./images/choose/11-person.jpg" data-img-alt="Page 4" value="4"> Page 4 </option>
+                        <option data-img-src="./images/choose/20-person.jpg" data-img-alt="Page 5" value="5"> Page 5 </option>
+                        <option data-img-src="./images/choose/21-person.jpg" data-img-alt="Page 6" value="6"> Page 6 </option>
+                        <option data-img-src="./images/choose/22-person.jpg" data-img-alt="Page 7" value="7"> Page 7 </option>
+                        <option data-img-src="./images/choose/23-person.jpg" data-img-alt="Page 8" value="8"> Page 8 </option>
+                        <option data-img-src="./images/choose/24-person.jpg" data-img-alt="Page 9" value="9"> Page 9 </option>
+                        <option data-img-src="./images/choose/25-person.jpg" data-img-alt="Page 10" data-img-class="last" value="10"> Page 10 </option>
                     </select>
                 </div>
             </div>
